--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num-traits = "0.2.19"
 pest = "2.7.15"
 pest_derive = "2.7.15"
 rustpython-parser = "0.4.0"
